<resources>
    <string name="app_name">Basic Calculator</string>

    //CUSTOM STRINGS
    <string name="ac">AC</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="equals">=</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="divide">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="multiply">x</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="percentage">%</string>
    <string name="power">^</string>
    <string name="root">√</string>
    <string name="basic_calculator">Basic Calculator</string>
    <string name="developed_by">Developed By</string>
    <string name="amrit_nayak_iter_soa">Amrit Nayak\nITER, SOA</string>
    <string name="logo">Logo</string>

</resources>